# CXX2dGames

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  setup.sh
.github/workflows/: cmake.yml
GameUtils/: CMakeLists.txt
GameUtils/include/GameUtils/: GameUtils.h
GameUtils/src/GameUtils/: GameUtils.cpp
GameUtils/tests/: CMakeLists.txt  main.cpp
GameUtils/tests/unit/: GameUtils_test.h
SpaceShooter/: CMakeLists.txt
SpaceShooter/src/SpaceShooter/: main.cpp
cmake/: clang-cxx-tools.cmake
